@@ -123,7 +123,7 @@ ActivateStarShip (COUNT which_ship, SIZE state)
 				which_ship = FleetPtr->known_strength;
 			else if (FleetPtr->actual_strength == 0)
 			{
-				if (!(FleetPtr->allied_state & (GOOD_GUY | BAD_GUY)))
+				if (FleetPtr->allied_state == DEAD_GUY)
 					which_ship = 0;
 			}
 			else if (FleetPtr->known_strength == 0
@@ -182,10 +182,10 @@ ActivateStarShip (COUNT which_ship, SIZE state)
 		}
 		case CHECK_ALLIANCE:
 		{
-			COUNT flags;
+			UWORD flags;
 			FLEET_INFO *FleetPtr = LockFleetInfo (&GLOBAL (avail_race_q),
 					hFleet);
-			flags = FleetPtr->allied_state & (GOOD_GUY | BAD_GUY);
+			flags = FleetPtr->allied_state;
 			UnlockFleetInfo (&GLOBAL (avail_race_q), hFleet);
 			return flags;
 		}
@@ -195,17 +195,16 @@ ActivateStarShip (COUNT which_ship, SIZE state)
 			FLEET_INFO *FleetPtr = LockFleetInfo (&GLOBAL (avail_race_q),
 					hFleet);
 
-			if (!(FleetPtr->allied_state & (GOOD_GUY | BAD_GUY)))
+			if (FleetPtr->allied_state == DEAD_GUY)
 			{	/* Strange request, silently ignore it */
 				UnlockFleetInfo (&GLOBAL (avail_race_q), hFleet);
 				break;
 			}
 
-			FleetPtr->allied_state &= ~(GOOD_GUY | BAD_GUY);
 			if (state == SET_ALLIED)
-				FleetPtr->allied_state |= GOOD_GUY;
+				FleetPtr->allied_state = GOOD_GUY;
 			else
-				FleetPtr->allied_state |= BAD_GUY;
+				FleetPtr->allied_state = BAD_GUY;
 			
 			UnlockFleetInfo (&GLOBAL (avail_race_q), hFleet);
 			break;
@@ -381,8 +380,6 @@ CloneShipFragment (COUNT shipIndex, QUEUE *pDstQueue, COUNT crew_level)
 		SHIP_FRAGMENT *ShipFragPtr;
 
 		ShipFragPtr = LockShipFrag (pDstQueue, hBuiltShip);
-		ShipFragPtr->which_side = TemplatePtr->allied_state &
-				(GOOD_GUY | BAD_GUY);
 		ShipFragPtr->captains_name_index = captains_name_index;
 		ShipFragPtr->race_strings = TemplatePtr->race_strings;
 		ShipFragPtr->icons = TemplatePtr->icons;
